@@ -1,3 +1,5 @@
+2007-02-26 Prevent building _wxagg.so with broken Mac OS X wxPython. - ADS
+
 2007-02-23 Require setuptools for Python 2.3 - ADS
 
 2007-02-22 WXAgg accelerator updates - KM
